Sample/GameEngine/error/Shader/tess/triangles.tel
#version 420 core

layout(triangles, equal_spacing, ccw) in;

//out vec4 color;

out vec2 fragTexcoord;

void main()
{
	float u = gl_TessCoord.x;
	float v = gl_TessCoord.y;
	float w = gl_TessCoord.z;

	fragTexcoord = vec2((1-u, v);

	gl_Position = u * gl_in[0].gl_Position
		+ v * gl_in[1].gl_Position
		+ w * gl_in[2].gl_Position;
}
